--- a/app/index.html
+++ b/app/index.html
@@ -111,13 +111,13 @@
 	  </div>
   </div>
 
-  <div id="testimonials" class="page-section page-section--testimonials">
-	<div class="wrapper">
+  <div id="testimonials" class="page-section page-section--testimonials page-section--no-b-padding-until-medium">
+	<div class="wrapper wrapper--no-padding-until-medium">
 		<h2 class="section-title">
 		<img class="section-title__icon" src="assets/images/icons/comment.svg">
 		Real <strong>Testimonials</strong></h2>
 		
-		<div class="row row--t--padding row--gutters--small row--gutters generic-content-container">
+		<div class="row row--gutters row--equal-height-at-medium row--gutters--small row--t--padding generic-content-container">
 			<div class="row__medium-4">
 				<div class="testimonial">
 					<div class="testimonial__photo">
@@ -139,7 +139,7 @@
 				</div>
 			</div>
 			<div class="row__medium-4">
-				<div class="testimonial">
+				<div class="testimonial testimonial--last">
 					<div class="testimonial__photo">
 						<img src="assets/images/testimonial-cat.jpg">
 					</div>
