--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet", href="temp/styles/styles.css">
 </head>
 <body>
-  <header>
+  <header class="site-header">
     <img src="assets/images/icons/clear-view-escapes.svg">
     <a href="#" class="btn btn--orange">Get in Touch</a>
     <nav>
